--- a/index.html
+++ b/index.html
@@ -12,20 +12,20 @@
         </h1>
         <img src="imgg/gsu logo.jpg" alt="potos" srcset="">
         <h2>
-            <table>
+            <table border="5px">
                 <tr>
-                    <td>ug20/sccs/1059</td>
-                    <td>ug20/sccs/1059</td>
+                    <td>UG20/SCCS/1059</td>
+                    <td>UG20/SCCS/1059</td>
                 </tr>
                 <tr>
-                    <td>ug20/sccs/1059</td>
-                    <td>ug20/sccs/1059</td>
+                    <td>UG20/SCCS/1059</td>
+                    <td>UG20/SCCS/1059</td>
                 </tr> <tr>
-                    <td>ug20/sccs/1059</td>
-                    <td>ug20/sccs/1059</td>
+                    <td>UG20/SCCS/1059</td>
+                    <td>UG20/SCCS/1059</td>
                 </tr> <tr>
-                    <td>ug20/sccs/1059</td>
-                    <td>ug20/sccs/1059</td>
+                    <td>UG20/SCCS/1059</td>
+                    <td>UG20/SCCS/1059</td>
                 </tr>
             </table>
         </h2>
